body shifting issue

--- a/style.css
+++ b/style.css
@@ -13,8 +13,8 @@ html,
 body {
   background: var(--bg);
   margin: 0;
-  height: 100%;
-  width: 100%;
+  height: 100vh;
+  width: 100vw;
   color: var(--ui);
   font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue",
     Arial;
